Add testModel route
