# server-src/api/swagger.yaml
@@ -165,6 +165,40 @@ paths:
         - "write:models"
         - "read:models"
       x-swagger-router-controller: "Models"
+  /testing:
+    post:
+      tags:
+      - "models"
+      summary: "Test against a model"
+      description: ""
+      operationId: "testModel"
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Model object that needs to be tested"
+        required: true
+        schema:
+          $ref: "#/definitions/Model"
+      responses:
+        "200":
+          description: "Ok"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
+      security:
+      - user_auth:
+        - "write:models"
+        - "read:models"
+      x-swagger-router-controller: "Models"
   /models/{modelId}:
     get:
       tags:
